--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "element-plus": "^2.9.7",
     "pinia": "^3.0.1",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
