--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "dompurify": "^3.2.6",
     "element-plus": "^2.9.7",
+    "marked": "^15.0.12",
     "pinia": "^3.0.1",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
